crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_excl_mark_doctypea_9.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"<!DOCTYPEa 9\"####)"
---
[
    Token {
        data: "DOCTYPEa 9",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
