crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_excl_mark_doctypea_a1.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"<!DOCTYPEa a1\"####)"
---
[
    Token {
        data: "DOCTYPEa a1",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
